# adjutant

./: .env.example  .gitignore  .gitmodules  ADJUTANT_FRAMEWORK_PLAN.md  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY_ASSESSMENT.md  adjutant  adjutant.yaml.example  news_config.json.example  opencode.json  pyproject.toml
.github/workflows/: release.yml
.opencode/agents/: adjutant.md
docs/: README.md
docs/architecture/: autonomy.md  design-decisions.md  identity.md  messaging.md  overview.md  state.md
docs/development/: adaptor-guide.md  phase-8.md  plugin-guide.md  setup-wizard.md  testing.md
docs/guides/: autonomy.md  commands.md  configuration.md  getting-started.md  knowledge-bases.md  lifecycle.md  memory.md  news.md  schedules.md  troubleshooting.md
docs/plans/: memory-system.md
docs/reference/: 2026-03-01-deployment-readiness.md  2026-03-02-phase7-readiness.md  2026-03-11-heartbeat-rename.md  2026-03-13-kb-model-passthrough.md  2026-03-15-codebase-audit.md  2026-03-15-implementation-plan.md  2026-03-15-kb-write-speedup.md  2026-03-15-plan-alignment.md  2026-03-15-project-state.md  2026-03-16-deployment-readiness.md  2026-03-20-claude-code-backend-plan.md  agent-violations.md  api-models.md  deployment-readiness.md  documentation-site-plan.md  framework-plan.md  inconsistencies.md  kb-runtime-hardening-plan.md  landscape.md  opencode-serve-approach.md  phase7-autonomy-plan.md  (+4 more)
identity/: heart.md.example  registry.md.example  soul.md.example
prompts/: escalation.md  memory_digest.md  pulse.md  review.md
tests/: conftest.py  run
(+207 files in other folders)
